layout on ship roughly working

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -107,6 +107,23 @@ $shadowColor: black;
     hover:text-black transition-colors cursor-pointer;
 }
 
+.item-titles {
+  padding: 4px 0;
+  padding-left: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.9);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+  font-weight: 300;
+  font-size: 13px;
+  //background: url("/systems/wwn/assets/back.png");
+  background-color: #000;
+  color: white;
+  margin-top: 7px;
+}
+
+.item-working {
+  color: rgba(0, 0, 0, 0.2);
+}
+
 button {
   @apply border border-gray-700 rounded-md p-1 bg-gray-300;
 }
