--- a/src/templates/items/shipDefense-sheet.html
+++ b/src/templates/items/shipDefense-sheet.html
@@ -2,5 +2,11 @@
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
   {{> "systems/swnr/templates/items/fragments/vehicle-base.html"}}
   <div class="flex flexrow">
+    <div class="flex flex-col items-center">
+      {{localize 'swnr.sheet.ship.effect'}}:
+      <input
+        class="w-64 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        type="text" name="data.effect" value="{{data.data.effect}}" />
+    </div>
   </div>
 </form>
