--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -317,7 +317,7 @@
                   <div>
                     <li class="item-titles flexrow">
                       <div class="role-name">{{localize 'swnr.sheet.ship.station.role'}}</div>
-
+        
                       <div class="role-crew">{{localize 'swnr.sheet.ship.station.crew'}}</div>
                     </li>
                     <ol class="item-list">
@@ -329,11 +329,11 @@
                           <div>
                             <select
                               class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
-
+        
                               <option></option>
                               <option>Ra's al Ghul</option>
                               <option>Bruce Wayne</option>
-
+        
                             </select>
                           </div>
                         </div>
@@ -344,7 +344,7 @@
                             {{localize 'swnr.sheet.ship.station.gunnery'}}
                           </div>
                           <div>
-
+        
                             <select
                               class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
                               <option></option>
@@ -359,7 +359,7 @@
                             {{localize 'swnr.sheet.ship.station.engineering'}}
                           </div>
                           <div>
-
+        
                             <select
                               class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
                               <option></option>
@@ -375,12 +375,13 @@
                             {{localize 'swnr.sheet.ship.station.bridge'}}
                           </div>
                           <div>
-
+        
                             <select
                               class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
                               <option></option>
-                              <option>Ra's al Ghul</option>                              <option>Bruce Wayne</option>
-
+                              <option>Ra's al Ghul</option>
+                              <option>Bruce Wayne</option>
+        
                             </select>
                           </div>
                         </div>
@@ -391,12 +392,13 @@
                             {{localize 'swnr.sheet.ship.station.comms'}}
                           </div>
                           <div>
-
+        
                             <select
                               class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
                               <option></option>
-                              <option>Ra's al Ghul</option>                              <option>Bruce Wayne</option>
-
+                              <option>Ra's al Ghul</option>
+                              <option>Bruce Wayne</option>
+        
                             </select>
                           </div>
                         </div>
@@ -404,18 +406,18 @@
                     </ol>
                   </div>
                 </div><!-- end stations-->
-
-
-
+        
+        
+        
                 <div class="weapons pr-0.5">
                   <!-- weapons -->
                   <div>
                     <li class="item-titles flexrow">
                       <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
-                      <div class="item-name">{{localize 'swnr.sheet.ship.weapon'}}</div>
+                      <div class="item-name ">{{localize 'swnr.sheet.ship.weapon'}}</div>
                       <div class="item-dmg">{{localize 'swnr.sheet.ship.dmg'}}</div>
                       <div class="item-qualities">{{localize 'swnr.sheet.ship.qualities'}}</div>
-
+        
                       <div class="item-controls">
                       </div>
                     </li>
@@ -423,9 +425,9 @@
                       {{#each itemTypes.shipWeapon as |item id|}}
                       {{log item}}
                       <li class="item-entry">
-                        <div class="item flexrow" data-item-id="{{id}}">
-                          <div class="item-name item-rollable flexrow">
-                            {{item.name}}
+                        <div class="item flexrow" data-item-id="{{item.id}}">
+                          <div class="item-name item-click item-rollable flexrow">
+                            <a>{{item.name}}</a>
                           </div>
                           <div>
                             {{item.data.data.damage}}
@@ -435,29 +437,29 @@
                           </div>
                           <div class="item-controls">
                             <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
-                              title='{{localize "WWN.spells.Prepared"}}'>
-                              <i class="fas fa-heart-broken item-working"></i>
+                              title='{{localize ' swnr.sheet.break-item'}}'>
+                              <i class="fas fa-heart-broken {{#unless item.data.data.broken}}item-working{{/unless}}"></i>
                             </a>
-                            <a class="item-control item-edit" title='{{localize "WWN.Edit"}}'><i
+                            <a class="item-control item-edit" title='{{localize ' swnr.sheet.edit-item'}}'><i
                                 class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title='{{localize "WWN.Delete"}}'><i
+                            <a class="item-control item-delete" title='{{localize ' swnr.sheet.delete-item'}}'><i
                                 class="fas fa-trash"></i></a>
-
+        
                           </div>
                         </div>
                       </li>
                       {{/each}}
-
+        
                     </ol>
                   </div>
-
+        
                 </div>
               </div>
               <div>
                 <!-- Right Col -->
                 <!-- defense -->
                 <div class="defense pr-0.5">
-
+        
                   <div>
                     <li class="item-titles flexrow">
                       <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
@@ -470,32 +472,32 @@
                       {{#each itemTypes.shipDefense as |item id|}}
                       {{log item}}
                       <li class="item-entry">
-                        <div class="item flexrow" data-item-id="{{id}}">
-                          <div class="item-name item-rollable flexrow">
-                            {{item.name}}
+                        <div class="item flexrow" data-item-id="{{item.id}}">
+                          <div class="item-name item-click item-rollable flexrow">
+                            <a>{{item.name}}</a>
                           </div>
                           <div>
                             {{item.data.data.effect}}
                           </div>
                           <div class="item-controls">
                             <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
-                              title='{{localize "WWN.spells.Prepared"}}'>
-                              <i class="fas fa-heart-broken item-working"></i>
+                              title='{{localize ' swnr.sheet.break-item'}}'>
+                              <i class="fas fa-heart-broken {{#unless item.data.data.broken}}item-working{{/unless}} "></i>
                             </a>
-                            <a class="item-control item-edit" title='{{localize "WWN.Edit"}}'><i
+                            <a class="item-control item-edit" title='{{localize ' swnr.sheet.edit-item'}}'><i
                                 class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title='{{localize "WWN.Delete"}}'><i
+                            <a class="item-control item-delete" title='{{localize ' swnr.sheet.delete-item'}}'><i
                                 class="fas fa-trash"></i></a>
-
+        
                           </div>
                       </li>
                       {{/each}}
                     </ol>
                   </div>
-
+        
                   <!-- fittings  -->
                   <div class=" fittings pr-0.5">
-
+        
                     <div>
                       <li class="item-titles flexrow">
                         <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
@@ -508,23 +510,23 @@
                         {{#each itemTypes.shipFitting as |item id|}}
                         {{log item}}
                         <li class="item-entry">
-                          <div class="item flexrow" data-item-id="{{id}}">
-                            <div class="item-name item-rollable flexrow">
-                              {{item.name}}
+                          <div class="item flexrow" data-item-id="{{item.id}}">
+                            <div class="item-name  item-click item-rollable flexrow">
+                              <a>{{item.name}}</a>
                             </div>
                             <div>
                               {{item.data.data.effect}}
                             </div>
                             <div class="item-controls">
                               <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
-                                title='{{localize "WWN.spells.Prepared"}}'>
-                                <i class="fas fa-heart-broken item-working"></i>
+                                title='{{localize ' swnr.sheet.break-item'}}'>
+                                <i class="fas fa-heart-broken {{#unless item.data.data.broken}}item-working{{/unless}}"></i>
                               </a>
-                              <a class="item-control item-edit" title='{{localize "WWN.Edit"}}'><i
-                                  class="fas fa-edit"></i></a>
-                              <a class="item-control item-delete" title='{{localize "WWN.Delete"}}'><i
+                              <a class="item-control item-edit" title='{{localize ' swnr.sheet.edit-item'}}'>
+                                <i class="fas fa-edit"></i></a>
+                              <a class="item-control item-delete" title='{{localize ' swnr.sheet.delete-item'}}'><i
                                   class="fas fa-trash"></i></a>
-
+        
                             </div>
                         </li>
                         {{/each}}
@@ -534,24 +536,31 @@
                 </div>
               </div>
             </div>
-            <div class="tab notes" data-group="primary" data-tab="notes">
+          </div>
+          <div class="tab notes min-h-full" data-group="primary" data-tab="notes">
+            <div class="grid grid-cols-2">
               <!-- Description -->
               <div class="pr-0.5 text-lg">
                 Description
+                <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
+                  {{editor content=data.data.description target="data.description" button=true
+                  owner=owner editable=editable}}
+                </div>
               </div>
-
-
               <!-- Mods -->
               <div class="pr-0.5 text-lg">
                 Mods
+                <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
+                  {{editor content=data.data.mods target="data.mods" button=true
+                  owner=owner editable=editable}}
+                </div>
               </div>
             </div>
-
-            <div class="tab crew min-h-full" data-group="primary" data-tab="crew">
-              Crew
-            </div>
-
-
+          </div>
+          <!-- Crew Tab-->
+          <div class="tab crew min-h-full" data-group="primary" data-tab="crew">
+            Crew
+          </div>
         </section>
       </div>
     </div>
