--- a/src/templates/items/shipFitting-sheet.html
+++ b/src/templates/items/shipFitting-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} -m-2 p-2 bg-gray-200">
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
   {{> "systems/swnr/templates/items/fragments/vehicle-base.html"}}
-  <div class="flex flexrow">
+  <div class="flex flexrow gap-2 text-center">
     <div class="flex flex-col items-center">
       {{localize 'swnr.sheet.ship.effect'}}:
       <input
