--- a/src/templates/items/shipWeapon-sheet.html
+++ b/src/templates/items/shipWeapon-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} -m-2 p-2 bg-gray-200">
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
   {{> "systems/swnr/templates/items/fragments/vehicle-base.html"}}
-  <div class="flex flexrow">
+  <div class="flex flexrow gap-2 text-center">
     <div class="flex flex-col items-center">
       {{localize 'swnr.weapon.damageFormula'}}:
       <input
@@ -40,26 +40,7 @@
     </div>
 
 
-    <!-- Ship /  class -->
-    <div class="flex flex-col items-center">
-      {{localize 'swnr.sheet.ship.ship-class'}}
 
-      <select name="data.shipClass"
-        class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
-        {{#select data.data.shipClass}}
-        <option value="fighter">
-          {{localize 'swnr.sheet.ship.shipClass.fighter'}}
-        </option>
-        <option value="frigate">{{localize 'swnr.sheet.ship.shipClass.frigate'}}</option>
-        <option value="cruiser">{{localize 'swnr.sheet.ship.shipClass.cruiser'}}</option>
-        <option value="capital">
-          {{localize 'swnr.sheet.ship.shipClass.capital'}}
-        </option>
-        {{/select}}
-      </select>
-
-
-    </div>
   </div>
 
 </form>
